tests/snapshots/json_backport.snap
---
source: tests/snapshots.rs
expression: transcript
---
exit: 0
--- stdout ---
{
  "result": "patched",
  "template": "[tmp]/template",
  "revision": "main ([short])",
  "patch": "From [sha] Mon Sep 17 00:00:00 2001\nFrom: Test <test@example.invalid>\nDate: [date]\nSubject: [PATCH] tpl: backport from project\n\nBackported by git-tpl [version] from project, rendered at main ([short]).\n\n  template/ci.yml <- ci.yml\n\ndiff --git a/template/ci.yml b/template/ci.yml\n--- a/template/ci.yml\n+++ b/template/ci.yml\n@@ -1,4 +1,5 @@\n name: CI\n+on: [push, pull_request]\n jobs:\n   test:\n     steps:\n-- \ngit-tpl [version]\n\n",
  "output": null,
  "applyCommand": "git tpl backport | git -C ../template am",
  "files": [
    {
      "rendered": "ci.yml",
      "source": "template/ci.yml",
      "insertions": 1,
      "deletions": 0,
      "added": false
    }
  ],
  "skipped": [],
  "unsubstituted": [],
  "insertions": 1,
  "deletions": 0,
  "ok": true
}
--- stderr ---
<empty>
