tests/snapshots/json_status.snap
---
source: tests/snapshots.rs
expression: transcript
---
exit: 2
--- stdout ---
{
  "source": "[tmp]/template",
  "id": "template",
  "ref": "refs/tpl/template",
  "tip": "[sha]",
  "renderedReference": "main",
  "renderedCommit": "[sha]",
  "dirty": false,
  "availableReferenceDescription": "main ([short])",
  "availableCommit": "[sha]",
  "templateMoved": true,
  "merged": true,
  "renderingCount": 1,
  "remote": null,
  "worktreeClean": true,
  "pending": true,
  "ok": true
}
--- stderr ---
<empty>
