tests/snapshots/json_update.snap
---
source: tests/snapshots.rs
assertion_line: 29
expression: transcript
---
exit: 0
--- stdout ---
{
  "result": "updated",
  "id": "template",
  "ref": "refs/tpl/template",
  "template": "[tmp]/template",
  "commit": "[sha]",
  "previousRevision": "main ([short])",
  "revision": "main ([short])",
  "changes": [
    {
      "path": ".github/workflows/release.yml",
      "kind": "added"
    },
    {
      "path": "README.md",
      "kind": "modified"
    }
  ],
  "answersChanged": false,
  "startedNewHistory": false,
  "migrations": [],
  "movedCommit": null,
  "ignoredAnswers": [],
  "pushed": null,
  "ok": true
}
--- stderr ---
<empty>
